--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="https://kit.fontawesome.com/11acc5a5c1.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css?family=Cookie" rel="stylesheet">
 	<link href="ring.css" rel="stylesheet">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Ring Ceremony Invitation</title>
 
 	</head>
