--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	<div class="container">
 		<div class="banner">
 			<div class="nav">
-				<b >Ring Ceremony followed by Dinner</b>
+				<b >Reception Followed By Dinner</b>
 				<div class="menu">
 					<a href="#">Home</a>
 					<a href="#venue">Venue</a>
@@ -30,15 +30,15 @@
 			</div>
 			<div class='quote'>				
 				<p>
-					A new beginning, a new life..<br>
-					We are getting engaged...<br>
-					You are invited to join us..<br>
-				On our blissful union and make our day!			
+					A New Beginning, A new life..<br>
+					We Are Getting Married...<br>
+					You Are Invited To Join Us..<br>
+				On Our Blissful Union And Make Our Day!			
 				</p>
 			</div>
 			<div class="text">
-				<h1>Abbas Shaikh <span class="and">&</span> Nida Ansari</h1>
-				<span class="date">On 27th November[Sunday], 2022<br> Gujarat Haj House,Kalupur<br> 5:00 PM Onwards <br>  </span>
+				<h1>Farhan<span class="and">&</span>Fauzia</h1>
+				<span class="date">On 17 December[Saturday], 2022<br>Om Kar Garden<br> 5:00 PM Onwards <br>  </span>
 				
 				<p style="text-align:center; color: #f15; " id="demo"></p>
 				
@@ -55,7 +55,7 @@
 			<div class="venue" id="venue">
 				<h2><a name="venue">Venue</a></h2>
 				<img src="hotel.jpg">
-				<p><b class="hotel">Haj House,</b><br>Opposite Old Railway Station, Sakar Bazzar, Kalupur, Ahmedabad
+				<p><b class="hotel">Om Kar Garden,</b><br>C-21 Bhagvan Marg,Opposite Sanjivni Hospital,Jaipur,Rajasthan
 				</p>
 			
 		</div>
@@ -72,7 +72,7 @@
 
 <script>
 // Set the date we're counting down to
-var countDownDate = new Date("nov 27, 2022 17:30:00").getTime();
+var countDownDate = new Date("dec 17, 2022 17:30:00").getTime();
 
 // Update the count down every 1 second
 var x = setInterval(function() {
@@ -96,7 +96,7 @@ var x = setInterval(function() {
   // If the count down is over, write some text 
   if (distance < 0) {
     clearInterval(x);
-    document.getElementById("demo").innerHTML = "engaged";
+    document.getElementById("demo").innerHTML = "Married";
   }
 }, 1000);
 </script>
